test/src/e2e_vm_tests/test_programs/should_pass/forc/dependency_package_field/src/main.sw
script;

// Check that code uses declared dependency name `std_alt` not package name `std`.
use utils_alt::*;

fn main() -> u64 {
    0
}
