test/src/e2e_vm_tests/test_programs/should_fail/star_import_alias/src/main.sw
script;

mod bar;

// This should not compile but `use ::bar::*;` should
use ::bar::{* as all}; <-- warning: unused import

fn main() -> bool {
    false
}
